# apple-swift

./: CMakeLists.txt
cmake/modules/: AddSwift.cmake  AddSwiftUnittests.cmake  Libdispatch.cmake  SwiftAndroidSupport.cmake  SwiftConfigureSDK.cmake  SwiftSharedCMakeConfig.cmake
include/swift/AST/: ASTWalker.h  TBDGenRequests.h
include/swift/Basic/: JSONSerialization.h  Version.h
include/swift/IRGen/: Linking.h
include/swift/Runtime/: Atomic.h  MutexPThread.h  ThreadLocalStorage.h
include/swift/SIL/: Dominance.h
lib/AST/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  JSONSerialization.cpp  LangOptions.cpp  Platform.cpp  Statistic.cpp
lib/Basic/Windows/: TaskQueue.inc
lib/ClangImporter/: CMakeLists.txt  ClangImporter.cpp  ClangSourceBufferImporter.cpp  ClangSourceBufferImporter.h
lib/DependencyScan/: CMakeLists.txt
lib/Driver/: Compilation.cpp  DarwinToolChains.cpp  ToolChains.cpp  ToolChains.h  UnixToolChains.cpp  WindowsToolChains.cpp
lib/Frontend/: Frontend.cpp  ModuleInterfaceLoader.cpp
lib/FrontendTool/: CMakeLists.txt
lib/IRGen/: CMakeLists.txt  GenIntegerLiteral.cpp  IRGenModule.cpp  IRGenModule.h  Linking.cpp
lib/LLVMPasses/: ARCEntryPointBuilder.h
lib/RemoteAST/: InProcessMemoryReader.cpp
lib/SIL/IR/: SILPrinter.cpp
lib/SILOptimizer/Utils/: ConstantFolding.cpp
lib/Serialization/: Serialization.cpp  SerializeSIL.cpp
lib/TBDGen/: TBDGen.cpp  TBDGenRequests.cpp  TBDGenVisitor.h
stdlib/: CMakeLists.txt
stdlib/cmake/modules/: AddSwiftStdlib.cmake
stdlib/include/llvm/ADT/: Optional.h  STLExtras.h
stdlib/private/DifferentiationUnittest/: CMakeLists.txt
stdlib/private/StdlibUnittest/: InterceptTraps.cpp  RaceTest.swift  StdlibUnittest.swift  SymbolLookup.swift
stdlib/private/SwiftPrivate/: IO.swift
stdlib/private/SwiftPrivateLibcExtras/: Subprocess.swift
stdlib/private/SwiftPrivateThreadExtras/: SwiftPrivateThreadExtras.swift  ThreadBarriers.swift
stdlib/public/: CMakeLists.txt
stdlib/public/Differentiation/: TgmathDerivatives.swift.gyb
stdlib/public/Platform/: CMakeLists.txt  POSIXError.swift  Platform.swift  glibc.modulemap.gyb  msvcrt.swift
stdlib/public/SwiftShims/: LibcOverlayShims.h
stdlib/public/Windows/: WinSDK.swift
stdlib/public/core/: CMakeLists.txt  CTypes.swift
stdlib/public/runtime/: CMakeLists.txt  CygwinPort.cpp  Errors.cpp  ImageInspectionCOFF.cpp  ThreadLocalStorage.h
stdlib/public/stubs/: CommandLine.cpp  LibcShims.cpp  Random.cpp  Stubs.cpp
test/: CMakeLists.txt
tools/SourceKit/cmake/modules/: AddSwiftSourceKit.cmake
tools/SourceKit/lib/Support/: CMakeLists.txt
tools/SourceKit/lib/SwiftLang/: CMakeLists.txt
tools/SourceKit/tools/complete-test/: CMakeLists.txt  complete-test.cpp
tools/SourceKit/tools/sourcekitd-repl/: CMakeLists.txt
tools/SourceKit/tools/sourcekitd-test/: CMakeLists.txt  sourcekitd-test.cpp
tools/driver/: CMakeLists.txt  autolink_extract_main.cpp
tools/libSwiftSyntaxParser/: CMakeLists.txt
tools/lldb-moduleimport-test/: CMakeLists.txt
tools/sil-func-extractor/: CMakeLists.txt
tools/sil-llvm-gen/: CMakeLists.txt
tools/sil-nm/: CMakeLists.txt
tools/sil-opt/: CMakeLists.txt
tools/sil-passpipeline-dumper/: CMakeLists.txt
tools/swift-api-digester/: CMakeLists.txt
tools/swift-ast-script/: CMakeLists.txt
tools/swift-dependency-tool/: CMakeLists.txt
tools/swift-ide-test/: CMakeLists.txt
tools/swift-llvm-opt/: CMakeLists.txt
tools/swift-refactor/: CMakeLists.txt
tools/swift-remoteast-test/: CMakeLists.txt
tools/swift-syntax-test/: CMakeLists.txt
unittests/Basic/: CMakeLists.txt
unittests/runtime/: CMakeLists.txt
unittests/runtime/LongTests/: CMakeLists.txt
utils/: build-script-impl
utils/swift_build_support/swift_build_support/: targets.py
utils/swift_build_support/swift_build_support/products/: llvm.py  pythonkit.py
utils/update_checkout/: update-checkout-config.json
